--- a/js/cocktail-app/assets/css/style.scss
+++ b/js/cocktail-app/assets/css/style.scss
@@ -1,5 +1,17 @@
 body{
-  //text-decoration: underline;
+  font-family: 'Lato', sans-serif;
+}
+
+.card{
+
+  :hover{
+    cursor: pointer;
+    //transition: box-shadow 0.3s ease-in-out;
+    //box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
 
 }
+
+
+
 
