--- a/js/react/google-timer/src/index.css
+++ b/js/react/google-timer/src/index.css
@@ -17,23 +17,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.roboto-bold {
-  font-family: "Roboto", sans-serif;
+  font-family: Arial, sans-serif;
   font-weight: 700;
   font-style: normal;
+}
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+  display: none;
 }
